# VehicleControlAlgorithms

./: .dockerignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  imgui.ini
config/path_tracking/: adaptive_pure_pursuit.json  lqr.json  mpc.json  mppi.json  pure_pursuit.json  stanley.json
data/maps/map_01/: map.json  path.json
data/maps/map_02/: map.json  path.json
data/maps/map_03/: map.json  path.json
data/vehicle/: vehicle01.json  vehicle02.json
docs/: lqr.md  pipeline.md  pure_pursuit.md  render_simulation_flow.drawio
include/: map_loader.hpp  vehicle_control_ui.hpp
include/assets/icons/: dripicon_v2_icons.hpp
include/map/: map_data.hpp  map_loader.hpp
include/path_tracking/: config_reader.hpp  path_tracking_algorithm.hpp
include/path_tracking/adaptive_pure_pursuit/: adaptive_pure_pursuit.hpp  adaptive_pure_pursuit_loader.hpp
include/path_tracking/lqr/: lqr.hpp  lqr_loader.hpp
include/path_tracking/mpc/: mpc.hpp  mpc_loader.hpp
include/path_tracking/mppi/: mppi.hpp  mppi_loader.hpp
include/path_tracking/pure_pursuit/: pure_pursuit.hpp  pure_pursuit_loader.hpp
include/path_tracking/stanley/: stanley.hpp  stanley_loader.hpp
include/vehicle/: vehicle_bicycle_model.hpp  vehicle_data.hpp  vehicle_loader.hpp  vehicle_state.hpp
src/: main.cpp  map_loader.cpp  vehicle_control_ui.cpp
src/map/: map_loader.cpp
src/path_tracking/adaptive_pure_pursuit/: adaptive_pure_pursuit.cpp  adaptive_pure_pursuit_loader.cpp
src/path_tracking/lqr/: lqr.cpp  lqr_loader.cpp
src/path_tracking/mpc/: mpc.cpp  mpc_loader.cpp
src/path_tracking/mppi/: mppi.cpp  mppi_loader.cpp
src/path_tracking/pure_pursuit/: pure_pursuit.cpp  pure_pursuit_loader.cpp
src/path_tracking/stanley/: stanley.cpp  stanley_loader.cpp
src/vehicle/: vehicle_bicycle_model.cpp  vehicle_loader.cpp
